.. -*- coding: utf-8 -*-

Recent Changes for wxPython
=====================================================================

2.9.5.0
-------
*

wx.media.MediaCtrl on OSX-cocoa now has a functioning back-end using
the QTKit framework, so it works when running in either 32-bit or
64-bit mode.

Printing triggered from a Javascript window.print() statement will now
work on OSX when using the old wx.webkit or the new wx.html2 browser
controls. 

Updated Scintilla code to verison 3.21

Lots of fixes and improvements in the wxWidgets code.

Changed the wx.DateTime.Parse* methods to work like they did in
wxPython 2.8, they now return an integer indicating how far in to
the string that the parser parsed, or -1 on error.





2.9.4.1
-------
* 24-July-2012

A quick patch release to fix some C++ headers for the wxGTK port not
getting installed, causing a build error in wxPython.




2.9.4.0
-------
* 21-July-2012

wx.lib.pubsub: Pusub now defaults to the new "kwarg" version of the
API.  In order to continue using the original "arg1" API you will need
to import wx.lib.pubsub.setuparg1 before importing any other pubsub
modules. 

The wx.RA_USE_CHECKBOX and wx.RB_USE_CHECKBOX constants were removed.
They were only used by the incomplete PalmOS port which has been
removed from the wxWidgets source tree.

wx.Font: There is now GetStrikethrough and SetStrikethrough methods.

wx.StaticBox: Fixed the client origin and client size on MSW so
children of the static box should not overlap the box's label or
border lines.

Added wx.HTMLDataObject

Applied a patch from Sam Partington that fixes some threading issues
in the wrapper code and other cool stuff.

Added the missing wx/lib/agw/data dir to the installers.

Add wx.EnhMetaFile and wx.EnhMetaFileDC for MSW.  This DC type is what
is used by the print framework in the print preview window, so it
needed to be wrapped so self.GetDC() would work properly.







2.9.3.1
-------
* 29-Dec-2011
